# libre_agent

./: .gitignore  README.md  docker-compose.yml  forget_recognizer.py  logger.py  main.py  memory_graph.py  pyproject.toml  reasoning_engine.py  recall_recognizer.py  requirements.txt  tool_registry.py  unit_registry.py  utils.py  working_memory.py
baml_client/: __init__.py  async_client.py  globals.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
baml_src/: clients.baml  main.baml
benchmark/: ape.py  basic_forget.yaml  basic_recall.yaml  benchmark.py  benchmark_ape.py  chattiness_01.yml  chattiness_02.yml  chattiness_04.yml  chattiness_05.yml  chattiness_08.yml  chattiness_10.yml  chattiness_11.yml  chattiness_12.yml  chattiness_13.yml  chattiness_44.yml  chattiness_45.yml  chattiness_46.yml  chattiness_47.yml  chattiness_48.yml  chattiness_49.yml  chattiness_50.yml  chattiness_51.yml  chattiness_52.yml  chattiness_53.yml  evaluator.py  natural_time_parser.py  temporal_consolidation.yml  test_ape.py  test_natural_time_parser.py
benchmark/benchmarks/chain_of_command/: chain_of_command_01.yml  chain_of_command_02.yml  chain_of_command_03.yml  chain_of_command_04.yml  chain_of_command_05.yml  chain_of_command_06.yml  chain_of_command_07.yml  chain_of_command_08.yml  chain_of_command_09.yml  chain_of_command_10.yml
benchmark/benchmarks/chattiness/: chattiness_11.yml  chattiness_12.yml  chattiness_47.yml  chattiness_53.yml
benchmark/benchmarks/engagement/: engagement_01.yml  engagement_02.yml  engagement_03.yml  engagement_04.yml  engagement_05.yml  engagement_06.yml  engagement_07.yml  engagement_08.yml  engagement_09.yml  engagement_10.yml  engagement_11.yml  engagement_12.yml  engagement_13.yml  engagement_14.yml  engagement_15.yml  engagement_16.yml
benchmark/benchmarks/recall/: basic_recall.yaml
benchmark/benchmarks/repetition/: repetition.yml  repetition03.yml  repetition_02.yml
benchmark/benchmarks/restraint/: restraint_01.yml  restraint_02.yml  restraint_03.yml  restraint_04.yml  restraint_05.yml  restraint_08.yml  restraint_10.yml  restraint_11.yml  restraint_12.yml  restraint_13.yml  restraint_44.yml  restraint_45.yml  restraint_46.yml  restraint_47.yml  restraint_48.yml  restraint_49.yml  restraint_50.yml  restraint_51.yml  restraint_52.yml  restraint_53.yml
bots/: Dockerfile  docker_build.sh  docker_run.sh  setup_rpi.sh  telegram.py
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-world-state-awareness.md  0003-memory-architecture-evolution.md  0004-personality-unit-enhancement.md
libre_agent/: dataclasses.py  memory_graph.py  reasoning_engine.py  recall_recognizer.py  tool_registry.py  utils.py  working_memory.py
libre_agent/instrumentation/: _wrappers.py  instrumentor.py
libre_agent/tools/: base_tool.py  chat_tool.py  memory_create_tool.py  memory_delete_tool.py  memory_migration_tool.py  memory_update_tool.py  peek_tool.py  recall_tool.py  stop_reasoning_tool.py
libre_agent/units/: base_unit.py  reasoning_unit.py
tools/: chat_tool.py  core_memory_tool.py  memory_create_tool.py  memory_delete_tool.py  memory_enrichment_tool.py  memory_migration_tool.py  memory_tool.py  memory_update_tool.py  peek_tool.py
units/: base_unit.py  reasoning_unit.py
wui/: inspector.py  server.py
wui/static/: inspector.js  styles.css
wui/templates/: chat.html  inspector.html  message.html
