[tool.poetry]
name = "libre_agent"
version = "0.1.0"
description = "Merged representation of the entire codebase."
authors = ["Your Name <you@example.com>"]
# You can also add a license, homepage, repository, etc.

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

# Core dependencies
schedule = "1.2.0"
Pillow = "10.0.0"
networkx = "3.0"
colorama = "0.4.6"            # If using colorama
litellm = ">=1.55.9"
python-json-logger = "2.0.7"
baml-py = "0.73.5"

# Web UI dependencies
fastapi = "*"
uvicorn = "*"
websockets = "*"
python-multipart = "*"

# Command-line dependency
prompt_toolkit = "*"

# Telegram dependency
aiogram = "*"

# Logging dependencies
datasette = "*"
datasette-vega = "*"

# Telemetry dependencies
arize-phoenix = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation = "*"

# Benchmarking dependency (Git-based)
tabulate = { git = "https://github.com/dceluis/python-tabulate.git", rev = "master" }

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
